# c4ai-crawlerlm

./: .gitignore  CLAUDE.md  DOMAIN_LIST.md  HTML_REDUCTION_REPORT.md  INTERIM_REPORT.md  Makefile  PROBLEM_STATEMENT.md  PROBLEM_STATEMENT_2.md  README.md  TASK_A_PLAN.md  pyproject.toml
.streamlit/: config.toml
chrome-extension/: README.md  annotation_server.py  background.js  content.css  content.js  jsonrepair.min.js  popup.js  schemas.js  styles.css
data/: README.md  selected_url_list.txt
data/fetched/: exa_contents.json
data/processed/: golden.jsonl  test.jsonl  test_base.jsonl  test_chat.jsonl  token_analysis.csv  train_base.jsonl  val.jsonl  val_base.jsonl  val_chat.jsonl
notebooks/: 00_eda.ipynb  04_generate_synthetic.ipynb  05_token_impact_analysis.ipynb
scripts/: 00_collect.py  00_consolidate.py  00_sample.py  00_sample_from_common_crawl.py  00b_redact.py  01_filter.py  01_split.py  02_augment.py  02_fetch.py  03_convert.py  03_join.py  04_generate.py  05_convert_to_chat_format.py  06_finetune.py  07_evaluate.py  convert_lora_docker.sh  label_app.py  push_to_hf.py  qwen_utils.py
src/: __init__.py  qwen_utils.py  schemas.py
